--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
 }
+/* header */
 #navbar {
   margin: 20px 0;
 }
@@ -42,4 +43,43 @@ nav ul li a {
 }
 #image img {
   width: 63%;
+}
+
+/* our feature */
+#our_features {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  margin: 50px 0;
+}
+#feature_image {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 33%;
+  gap: 20px;
+}
+#feature_image img {
+  width: 100%;
+}
+#feature_title h1 {
+  font-size: 30px;
+}
+#title1 {
+  font-weight: lighter;
+  color: gray;
+}
+#title3 {
+  color: #ff900e;
+}
+#feature_title p {
+  margin: 10px 0;
+}
+#feature_title button {
+  background-color: #ff900e;
+  padding: 10px 20px;
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
 }
