--- a/style.css
+++ b/style.css
@@ -139,3 +139,28 @@ nav ul li a {
   justify-content: center;
   gap: 110px;
 }
+
+/* our_sponspors */
+#our_sponspors {
+  margin: 50px 0;
+}
+#our_sponspors_title {
+  text-align: center;
+}
+#our_sponspors_title p {
+  margin: 20px 0;
+}
+#our_sponspors_img {
+  display: flex;
+  justify-content: space-evenly;
+}
+#our_sponspors_img img {
+  width: 100px;
+  filter: grayscale(100%);
+}
+
+/* footer */
+footer {
+  text-align: center;
+  margin: 150px 0;
+}
